Added Static Input && Btn

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,10 @@
 <div id='app-main'>
-  <div class='title-wrap'>
-    <app-title></app-title>
+  <div class='app-wrap'>
+    <div class='title-wrap'>
+      <app-title></app-title>
+    </div>
+    <div>
+      <app-input></app-input>
+    </div>
   </div>
 </div>
