--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,6 +5,11 @@
     justify-content: center;
 }
 
+.app-wrap {
+    display: flex;
+    flex-direction: column;
+}
+
 .title-wrap {
     display: flex;
     justify-content: center;
