--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,13 @@
 <div id='app-main'>
   <div class='app-wrap'>
-    <div class='title-wrap'>
-      <app-title></app-title>
+    <div class='left-wrap'>
+      <div class='title-wrap'>
+        <app-title></app-title>
+      </div>
+      <div>
+        <app-input></app-input>
+      </div>
     </div>
-    <div>
-      <app-input></app-input>
-    </div>
+    <div class='right-wrap'></div>
   </div>
 </div>
