--- a/src/app/components/input/input.component.css
+++ b/src/app/components/input/input.component.css
@@ -29,3 +29,18 @@
     transition: all 0.5s;
     width: 100px;
 }
+
+@media(max-width: 531px) {
+    .input {
+        width: 200px;
+    }
+    .btn {
+        width: 60px;
+    }
+}
+
+@media(max-width: 355px) {
+    .input {
+        width: 125px;
+    }
+}
